@@ -78,6 +78,10 @@ struct {
   { "OptionsFrameSkip3", ID_OPTIONS_VIDEO_FRAMESKIP_3 },
   { "OptionsFrameSkip4", ID_OPTIONS_VIDEO_FRAMESKIP_4 },
   { "OptionsFrameSkip5", ID_OPTIONS_VIDEO_FRAMESKIP_5 },
+  { "OptionsFrameSkip6", ID_OPTIONS_VIDEO_FRAMESKIP_6 },
+  { "OptionsFrameSkip7", ID_OPTIONS_VIDEO_FRAMESKIP_7 },
+  { "OptionsFrameSkip8", ID_OPTIONS_VIDEO_FRAMESKIP_8 },
+  { "OptionsFrameSkip9", ID_OPTIONS_VIDEO_FRAMESKIP_9 },
   { "OptionsVideoVsync", ID_OPTIONS_VIDEO_VSYNC },
   { "OptionsVideoX1", ID_OPTIONS_VIDEO_X1 },
   { "OptionsVideoX2", ID_OPTIONS_VIDEO_X2 },
@@ -104,6 +108,8 @@ struct {
   { "OptionsEmulatorSaveSRAM", ID_OPTIONS_EMULATOR_SAVETYPE_SRAM },
   { "OptionsEmulatorSaveFLASH", ID_OPTIONS_EMULATOR_SAVETYPE_FLASH },
   { "OptionsEmulatorSaveEEPROMSensor", ID_OPTIONS_EMULATOR_SAVETYPE_EEPROMSENSOR },
+  { "OptionsEmulatorSaveFlash64K", ID_OPTIONS_EMULATOR_SAVETYPE_FLASH512K },
+  { "OptionsEmulatorSaveFlash128K", ID_OPTIONS_EMULATOR_SAVETYPE_FLASH1M },
   { "OptionsSoundOff", ID_OPTIONS_SOUND_OFF },
   { "OptionsSoundMute", ID_OPTIONS_SOUND_MUTE },
   { "OptionsSoundOn", ID_OPTIONS_SOUND_ON },
@@ -129,6 +135,8 @@ struct {
   { "OptionsFilterSuperEagle", ID_OPTIONS_FILTER_SUPEREAGLE },
   { "OptionsFilterPixelate", ID_OPTIONS_FILTER16BIT_PIXELATEEXPERIMENTAL },
   { "OptionsFilterMotionBlur", ID_OPTIONS_FILTER16BIT_MOTIONBLUREXPERIMENTAL },
+  { "OptionsFilterAdMameScale2x", ID_OPTIONS_FILTER16BIT_ADVANCEMAMESCALE2X },
+  { "OptionsFilterSimple2x", ID_OPTIONS_FILTER16BIT_SIMPLE2X },
   { "OptionsJoypadConfigure", ID_OPTIONS_JOYPAD },
   { "OptionsJoypadMotionConfigure", ID_OPTIONS_JOYPAD_MOTIONCONFIGURE },
   { "OptionsJoypadAutofireA", ID_OPTIONS_JOYPAD_AUTOFIRE_A },
